plugins {
    id 'java'
    id 'application'
}

group = 'com.nexsys'
version = '1.0-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21) // Use 21 for better compatibility
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // Logging
    implementation 'org.slf4j:slf4j-api:2.0.9'
    implementation 'ch.qos.logback:logback-classic:1.4.14'

    // Testing
    testImplementation platform('org.junit:junit-bom:5.10.1')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testImplementation 'org.mockito:mockito-core:5.8.0'
    testImplementation 'org.mockito:mockito-junit-jupiter:5.8.0'
    testImplementation 'org.assertj:assertj-core:3.25.1'

    // Test logging
    testImplementation 'org.slf4j:slf4j-simple:2.0.9'

    // JSON & YAML Utilities
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.16.1'
    implementation 'org.snakeyaml:snakeyaml-engine:2.7'

    // Sun Calculation Utilities
    implementation 'org.shredzone.commons:commons-suncalc:3.7'

    // ######## Other useful stuff ########
    implementation 'org.apache.commons:commons-lang3:3.12.0'

    // Caching library for LocationUtils distance calculations
    implementation 'com.github.ben-manes.caffeine:caffeine:3.1.8'
}

application {
    mainClass = 'com.nexsys.core.Main'
}

test {
    useJUnitPlatform()
    testLogging {
        events "passed", "skipped", "failed"
        exceptionFormat "full"
    }
}

tasks.named('jar') {
    manifest {
        attributes(
                'Main-Class': 'com.nexsys.core.Main'
        )
    }
}